# cpp-utils-lib

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/01-assert/: main.cpp
examples/02-logging/: main.cpp
examples/03-profiling/: main.cpp
examples/04-debug/: main.cpp
utils/: debug.hpp  formatter.hpp  logging.hpp  massert.hpp  profiling.hpp  utils.hpp
